<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onGoingModel"
            type="com.parental.control.displaytime.kids.safety.data.model.OnGoingScreenModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_label_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/lemon"
            android:text="@string/child_app_lock"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_label_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_one" />

        <com.parental.control.displaytime.kids.safety.utils.CustomizeCheckBox
            android:id="@+id/btnInstantLock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:button="@null"
            android:checked="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/instant_lock"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btnCustomLock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_second"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.7" />

        <com.parental.control.displaytime.kids.safety.utils.CustomizeCheckBox
            android:id="@+id/btnCustomLock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:button="@null"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/custom_lock"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnInstantLock"
            app:layout_constraintWidth_percent="0.7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/button_shape"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/lemon"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.060"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.45"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>