<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingTop="@dimen/_10sdp"
    tools:context="com.example.parentallock.presentation.settings.SettingsFragment">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_checkBox"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:tint="@color/endColor"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/more_app_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/more_apps"
        android:textAlignment="viewStart"
        android:textColor="@color/endColor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkBox"
        app:layout_constraintTop_toTopOf="@+id/iv_checkBox" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_checkBox_2"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:tint="@color/endColor"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="@+id/iv_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkBox"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/rate_us_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/rate_us"
        android:textAlignment="viewStart"
        android:textColor="@color/endColor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkBox_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkBox_2"
        app:layout_constraintTop_toTopOf="@+id/iv_checkBox_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_checkBox_3"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:tint="@color/endColor"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="@+id/iv_checkBox_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkBox_2"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/share"
        android:textAlignment="viewStart"
        android:textColor="@color/endColor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkBox_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkBox_3"
        app:layout_constraintTop_toTopOf="@+id/iv_checkBox_3" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_checkBox_4"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="12dp"
        android:tint="@color/endColor"
        android:visibility="gone"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="@+id/iv_checkBox_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkBox_3"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/about_us_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/about_us"
        android:textAlignment="viewStart"
        android:textColor="@color/endColor"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkBox_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkBox_4"
        app:layout_constraintTop_toTopOf="@+id/iv_checkBox_4" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_checkBox_5"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:tint="@color/endColor"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="@+id/iv_checkBox_4"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkBox_4"
        app:layout_constraintWidth_percent="0.40"
        app:srcCompat="@drawable/privacy_icon_new" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/privacy_policy"
        android:textAlignment="viewStart"
        android:textColor="@color/endColor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkBox_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkBox_5"
        app:layout_constraintTop_toTopOf="@+id/iv_checkBox_5" />


</androidx.constraintlayout.widget.ConstraintLayout>