<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp"
    tools:context="com.example.parentallock.presentation.instantlock.AppLockParentFragment">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instant_lock_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/instant_background_bg"
        android:elevation="@dimen/_1sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/custom_lock_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_instant_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon"
            android:gravity="center_vertical"
            android:text="@string/instant_lock"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toStartOf="@+id/iv_instant_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_instant_arrow"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_forward" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_instant_lock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instant_title"
            app:spanCount="3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_lock_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/instant_background_bg"
        android:elevation="@dimen/_1sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_activate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instant_lock_layout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_custom_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon"
            android:gravity="center_vertical"
            android:text="@string/custom_lock"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toStartOf="@+id/iv_custom_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_custom_arrow"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_forward" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_activate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/activate_now"
        android:textSize="@dimen/_11ssp"
        android:visibility="visible"
        app:backgroundTint="@color/endColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_lock_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>